--- a/PingPongClient/PingPongClient/PingPongClient.csproj
+++ b/PingPongClient/PingPongClient/PingPongClient.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B082E3EA-3836-4C70-9FEA-281F8D580B3C}</ProjectGuid>
+    <ProjectGuid>{2CD6B27B-83D8-4C09-946C-754713C24197}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>PingPong</RootNamespace>
-    <AssemblyName>PingPong</AssemblyName>
+    <RootNamespace>PingPongClient</RootNamespace>
+    <AssemblyName>PingPongClient</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="SocketClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
