--- a/PingPongClient/PingPongClient/PingPongClient.csproj
+++ b/PingPongClient/PingPongClient/PingPongClient.csproj
@@ -43,8 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SocketClient.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SocketClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
